code/objects/FormTemplate__c.object
<CustomObject>
    <fields>
        <fullName>Query_String__c</fullName>
        <description>If this field matches the incoming SMS, this form will be initiated to the user</description>
        <inlineHelpText>If this field matches the incoming SMS, this form will be initiated to the user</inlineHelpText>
        <label>Query String</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalFirstQuestions__c</fullName>
        <label>TotalFirstQuestions</label>
        <summaryFilterItems>
            <field>QuestionTemplate__c.FirstQuestion__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuestionTemplate__c.FormTemplate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Form Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Query_String__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ActiveTemplatesMustHaveOneFirstQuestion</fullName>
        <active>true</active>
        <errorConditionFormula>TotalFirstQuestions__c == 0 &amp;&amp;
ISPICKVAL( Status__c , &apos;Active&apos;)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Active Templates must have a first question</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotHaveMoreThanOneFirstQuestion</fullName>
        <active>true</active>
        <errorConditionFormula>TotalFirstQuestions__c &gt;1</errorConditionFormula>
        <errorMessage>There cannot be more than one first question marked for this Form Template.</errorMessage>
    </validationRules>
</CustomObject>